cka-files/storagetest.yaml
kind: Pod
apiVersion: v1
metadata:
   name: pv-pod
spec:
  volumes:
    - name: pv-storage
      persistentVolumeClaim:
        claimName: pv-claim
  containers:
    - name: pv-container
      image: leodotcloud/swiss-army-knife:latest
      command: ['sh', '-c', 'sleep 36000']
      volumeMounts:
        - mountPath: "/usr/share/nginx/html"
          name: pv-storage
