cka-files/deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-specific-access-label
spec:
  podSelector: 
    matchLabels:
      app: nginx
  ingress:
  - from:
    - podSelector: 
        matchLabels:
          access: "true"
      namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: sleepy
  policyTypes:
  - Ingress
